implemen sidebar ke semua form user

--- a/user/about.html
+++ b/user/about.html
@@ -70,7 +70,7 @@ li.dropdown {
     </div>
   </nav>
     <div class="container text-center" style="margin-top:100px;margin-bottom:20px">
-        <h2><i>The Team</i></h2>
+        <h2><i>Flexbox Gang</i></h2>
         <hr/>
         <div class="row" style="border-radius: 5px;padding-bottom:15px;">
             
